test/types/tuple/ferguson/tuple-blank-to-ref.good
tuple-blank-to-ref.chpl:11: In function 'byblank':
tuple-blank-to-ref.chpl:15: error: non-lvalue actual is passed to 'ref' formal 'arg' of byref()
